[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Agents/TRex.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PterrySpawner.gd" type="Script" id=3]
[ext_resource path="res://Scenes/CactusSpawner.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Pauser.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Floorsprite.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/m23.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Gamer.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/Quit Button.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 22 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.129412 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 7 )

[sub_resource type="DynamicFontData" id=6]
antialiased = false
font_path = "res://Assets/m23.TTF"

[sub_resource type="DynamicFont" id=7]
size = 5
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 8 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="ColorRect" parent="."]
margin_right = 240.0
margin_bottom = 160.0
color = Color( 0, 0, 0, 1 )

[node name="TRex" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( 8, 116 )
jump_speed = 100
long_jump_speed = 110
_gravity = 100

[node name="PterrySpawner" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 3 )
min_time = 4
max_time = 7
first_time = 4.0

[node name="Spawnpoint" type="Node2D" parent="PterrySpawner"]
position = Vector2( 240, 87 )

[node name="CactusSpawner" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 4 )
min_time = 3
max_time = 6
first_time = 2.5

[node name="Spawnpoint" type="Node2D" parent="CactusSpawner"]
position = Vector2( 240, 116 )

[node name="Pauser" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 5 )

[node name="Floor" type="StaticBody2D" parent="Pauser"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pauser/Floor"]
position = Vector2( 120, 138 )
shape = SubResource( 1 )

[node name="Sprite" parent="Pauser/Floor" groups=[
"self_modulate",
] instance=ExtResource( 6 )]
editor/display_folded = true
position = Vector2( 120, 136 )

[node name="Container" type="VBoxContainer" parent="Pauser"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_top = -160.0
margin_right = 69.0

[node name="HighscoreBG" type="ColorRect" parent="Pauser/Container"]
visible = false
margin_right = 138.0
margin_bottom = 160.0
size_flags_horizontal = 5
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Pauser"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -21.0
margin_right = 120.0
margin_bottom = 21.0

[node name="StartText" type="Label" parent="Pauser/VBoxContainer" groups=[
"modulate3",
]]
modulate = Color( 1, 1, 1, 0 )
margin_right = 240.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Game Start
Z to Jump
X to Long Jump"
align = 1

[node name="Timer" type="Timer" parent="Pauser/VBoxContainer/StartText"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pauser/VBoxContainer/StartText"]
anims/disappear = SubResource( 3 )

[node name="PauseText" type="Label" parent="Pauser/VBoxContainer"]
pause_mode = 2
visible = false
margin_top = 16.0
margin_right = 240.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Paused"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pauser/VBoxContainer/PauseText"]
anims/pulsate = SubResource( 4 )

[node name="QuitText" type="Label" parent="Pauser/VBoxContainer" groups=[
"modulate3",
]]
visible = false
margin_top = 31.0
margin_right = 240.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Game Over
Your Score 0"
align = 1

[node name="RestartText" type="Label" parent="Pauser/VBoxContainer" groups=[
"modulate3",
]]
visible = false
margin_top = 31.0
margin_right = 240.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press Enter to Restart
Press Q to quit"
align = 1

[node name="HighScores" type="Label" parent="Pauser/VBoxContainer" groups=[
"modulate3",
]]
visible = false
margin_top = 16.0
margin_right = 240.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Highest Scores
1st %d
2nd %d
3rd %d"
align = 1

[node name="Timer" type="Timer" parent="Pauser"]
wait_time = 0.03
one_shot = true

[node name="Score" type="Label" parent="." groups=[
"modulate3",
]]
margin_left = 120.0
margin_right = 238.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Score: 0"
align = 2

[node name="QuitButton" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
margin_left = 1.0
margin_top = 1.0

[node name="Label" parent="QuitButton/Quit Button" index="0" groups=[
"modulate3",
]]
margin_right = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sprite" parent="QuitButton/Quit Button" index="1" groups=[
"self_modulate",
]]

[node name="Pause" type="Label" parent="." groups=[
"modulate3",
]]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -28.5
margin_right = 28.5
margin_bottom = 14.0
custom_fonts/font = SubResource( 10 )
text = "P to Pause"
align = 1

[connection signal="tree_exiting" from="TRex" to="Pauser" method="_on_TRex_tree_exiting"]
[connection signal="timeout" from="Pauser/VBoxContainer/StartText/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Pauser/Timer" to="Pauser" method="_on_Timer_timeout"]

[editable path="TRex"]

[editable path="Pauser/Floor/Sprite"]

[editable path="QuitButton"]
